fixed heading so it aligns with top

--- a/google-serp-style.css
+++ b/google-serp-style.css
@@ -9,6 +9,7 @@ header {
 	height: 70px;
 	width: 100%;
 	display: inline-block;
+	margin-top: -15px;
 }
 .header-left {
 	float: left;
